--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2>Choose color to have a nice Gradient Background</h2>
 	<input type="color" id="color1" name="color1" value="#00ffaa">
 	<input type="color" id="color2" name="color2" value="#4f27d8">
-	<h3></h3>
+	<h3>Current Background</h3>
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
